--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 .nav-bar
 {
+    width: 100%;
+    position: absolute;
     display: flex;
     justify-content: space-between;
     
@@ -14,41 +16,69 @@
     width: 150px;
     height: 150px;
     border-radius: 75px;
-    margin: 10px 50px;
+}
+.sidemenu
+{
+    min-height: 100vh;
+    background-color: rgba(0, 0, 0, 0.678);
+    width: 0px;
+    z-index: 1;
+    overflow: hidden;
+}
+#close
+{
+    display: none;
 }
 .menu
 {
+    padding-top:30%;
     display: flex;
     list-style: none;
+    flex-direction: column;
+    
 }
 .menu li
 {
     font-size: 25px;
     font-family: sans-serif;
-    margin: 40px 20px;
+    margin: 10px 20px;
     font-weight: 900;
-    color: white;
+    color: rgb(180, 179, 179);
 }
 .menu li:hover{
-    font-size: 30px;
-    border-bottom: 5px solid rgb(255, 255, 255);
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    transition: 2s;
+    color: white; 
 }
-#menu
+.menu-btn
 {
     position: absolute;
     width: 50px;
     height: 50px;
-    top: 50px;
+    top: 40px;
     right: 50px;
-    display: none;
+    color: rgb(212, 42, 42);
+    font-size: 35px;
+    background-color: transparent;
 }
+.menu-btn:hover
+{
+    color: white;
+}
+.close-btn
+{
+    color: white;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 40px;
+    right: 50px;
+    font-size: 35px;
+    font-weight: 900;
+}
+
 .home
 {
     width: 100%;
-    height: 100vh;
+    height: 100vh; 
     background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)) ,url(images/bg1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -58,8 +88,8 @@
     color: white;
     font-size: 75px;
     font-family: serif;
-    padding: 0px 25px;
-    margin-top: 55px;
+    padding: 200px 0px 25px 25px;
+
     font-weight: 800;
 }
 .head2
@@ -265,21 +295,3 @@ label{
 
 /* Responsive */
 
-@media only screen and (max-width :900px)
-{
-    .footer{
-        display: block;
-        justify-content: center;
-        text-align: center;
-    }
-    #menu
-    {
-        display: block;
-        font-size: 25px;
-    }
-    .menu
-    {
-        display: none;
-        list-style: none;
-    }
-}
