--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.603),rgba(0, 0, 0, 0.603));
     padding: 20px;
     border-radius: 20px;
+    margin-bottom: 10px;
 }
 .social_head
 {
