--- a/style.css
+++ b/style.css
@@ -239,6 +239,12 @@
     border-radius: 25px;
     background-color: rgb(16, 190, 74);
 }
+.service_para
+{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
 .service-link
 {
     text-decoration: none;
